# ironman

./: README.md
ironman/: README.md  pyproject.toml
ironman/src/ironman/: crew.py  main.py
ironman/src/ironman/config/: agents.yaml  tasks.yaml
