[project]
name = "ironman"
version = "0.1.0"
description = "ironman using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
ironman = "ironman.main:run"
run_crew = "ironman.main:run"
train = "ironman.main:train"
replay = "ironman.main:replay"
test = "ironman.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
